# Machina

./: Dockerfile  Makefile  README.md
machina_metrology_task/: CMakeLists.txt  docker_entrypoint.bash  package.xml
machina_metrology_task/config/: pcd_viewer.rviz
machina_metrology_task/data/calibration/: flange_poses.csv  scanner_poses.csv
machina_metrology_task/data/pcd/: noisy_scan1.csv  noisy_scan2.csv
machina_metrology_task/launch/: machina_task.launch.xml
machina_metrology_task/output/: aligned_scan.csv  calibration_result.txt
machina_metrology_task/src/: data_generator_calibration.cpp  data_generator_pcd.cpp  hand_eye_calibration.cpp  pcd_filter_align.cpp
